--- a/res/drawable/blue_gradient.xml
+++ b/res/drawable/blue_gradient.xml
@@ -4,14 +4,14 @@
     <item android:state_pressed="true"><shape>
             <solid android:color="#1bccf3" />
 
-            <stroke android:width="1dp" android:color="#FFA500" />
+            <stroke android:width="1dp" android:color="@color/White" />
 
             <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
         </shape></item>
     <item><shape>
-            <gradient android:angle="270" android:endColor="#FFD700" android:startColor="#FFC0CB" />
+            <gradient android:angle="270" android:endColor="@color/white" android:startColor="@color/White" />
 
-            <stroke android:width="1dp" android:color="#C0C0C0" />
+            <stroke android:width="1dp" android:color="@color/Blue" />
 
             <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
         </shape></item>
