--- a/res/drawable/button_gradient.xml
+++ b/res/drawable/button_gradient.xml
@@ -25,12 +25,12 @@
 -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
  	<gradient 
-        android:startColor="#20B2AA" 
-        android:centerColor="#008000"
-        android:endColor="#90EE90"
+        android:startColor="#085FC2" 
+        android:centerColor="#085FC2"
+        android:endColor="#085FC2"
         android:angle="90"
      />
- 	<stroke android:width="0.5dp" android:color="#008000" />
+ 	<stroke android:width="0.5dp" android:color="#085FC2" />
     <corners
      android:bottomRightRadius="4dp"
      android:bottomLeftRadius="4dp"
