--- a/res/layout/account.xml
+++ b/res/layout/account.xml
@@ -3,16 +3,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
+  <TextView
+        android:id="@+id/textViewaccountinfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+          android:layout_gravity="center_horizontal"
+        android:text="Account Information"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+    
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/textViewusername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Username:"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewemail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Email Address:"
@@ -22,44 +29,21 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Forgot Password?"
+        android:text="Phone Number"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Profile Picture"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+    
 
-    <ImageView
-        android:id="@+id/imageViewprofilepicture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher" />
+   
 
-    <Button
-        android:id="@+id/buttonchangeprofile"
-        android:background="@drawable/button_gradient"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="change Picture" />
-<Button
-            android:id="@+id/passres"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@null"
-            android:text="logout? "
-            android:textColor="#21dbd4"
-            android:textStyle="bold" />
 
 <Button
      android:background="@drawable/button_gradient"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
+            android:layout_marginTop="20sp"
             android:text="Logout"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="left"
             android:id="@+id/logout"
             android:textSize="13dp"
             android:textColor="#000000"
