--- a/res/layout/activity_dailing_main.xml
+++ b/res/layout/activity_dailing_main.xml
@@ -1,17 +1,197 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout 
+     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout_root"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+   android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="10dp" >
-    <LinearLayout
+    >
+    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
+         android:id="@+id/google_now"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            style="@style/GNowProgressBar"/>
+
+       
+
+        
+   <TextView
+            android:layout_width="fill_parent"
+               android:background="@color/Blue"
+            android:textColor="@color/White"
+            android:gravity="center"
+            android:text="Signed in as"
+            android:layout_gravity="center_horizontal"
+            android:layout_height="wrap_content"
+            android:id="@+id/textsignedin" android:textSize="20dp"/>
+   <TextView
+            android:layout_width="fill_parent"
+             android:textColor="@color/White"
+            android:gravity="center"
+               android:background="@color/Blue"
+            android:text="username"
+            android:layout_gravity="center_horizontal"
+            android:layout_height="wrap_content"
+            android:id="@+id/textwelcome" android:textSize="20dp"/>
+    <TextView
+            android:layout_width="fill_parent"
+            android:textColor="#000000"
+              android:background="@color/Blue"
+            android:gravity="center"
+            android:text="username"
+            android:visibility="gone"
+            android:layout_gravity="center_horizontal"
+            android:layout_height="wrap_content"
+            android:id="@+id/textlaststop" android:textSize="20dp"/>
+     <RelativeLayout
+            android:orientation="vertical"
+            android:id="@+id/front"
+          
+             android:layout_width="wrap_content"
+              android:background="@color/Blue"
+    android:layout_height="wrap_content"
+            android:tag="front"
+           >
+
+        <ImageView
+                android:src="@drawable/contacts_icon"
+                 android:layout_marginTop="5dp"
+              
+                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                 style="@style/MyListImage"
+                android:id="@+id/example_image"
+                />
+
+        <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                   android:layout_marginTop="5dp"
+                   android:textColor="@color/White"  
+                android:layout_toRightOf="@id/example_image"
+                style="@style/MyListTitle"
+                android:id="@+id/example_itemname"/>
+        <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                 android:textColor="@color/White"
+                android:layout_below="@id/example_itemname"
+                 android:layout_toRightOf="@id/example_image"
+                style="@style/MyListTitle"
+                android:id="@+id/example_itemphone"/>
+ 
+
+    </RelativeLayout>
+
+
+       <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:orientation="horizontal" >
+    
+   <Button
+        android:id="@+id/buttoncallprevious"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:textColor="@color/White"
+        android:background="@drawable/buttonselect"
+        android:layout_gravity="center_horizontal"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/buttonchoosecontacts"
+        android:layout_below="@+id/buttonchoosecontacts"
+        android:layout_marginTop="14dp"
+        android:text="Previous" />
+   
+     <Button
+        android:id="@+id/buttoncallstart"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:textColor="@color/White"
+        android:background="@drawable/buttonselect"
+        android:layout_marginLeft="20dp"
+         android:layout_marginRight="20dp"
+       android:layout_gravity="center_horizontal"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/buttonchoosecontacts"
+        android:layout_below="@+id/buttonchoosecontacts"
+      
+        android:text="Dial this contact" />
+     
+       <Button
+        android:id="@+id/buttoncallnext"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:textColor="@color/White"
+        android:background="@drawable/buttonselect"
+        android:layout_gravity="center_horizontal"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/buttonchoosecontacts"
+        android:layout_below="@+id/buttonchoosecontacts"
+        android:layout_marginTop="14dp"
+        android:text="Next" />
+       
+     </LinearLayout>
+      <ProgressBar
+        android:id="@+id/progress"
+        style="?android:attr/progressBarStyleInverse"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:visibility="gone" />
+
+  <LinearLayout
+     android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+     android:orientation="horizontal"
+       >
+
+     <EditText
+         android:id="@+id/etEdit"
+           android:layout_height="match_parent"
+              android:background="@drawable/edittext_customisation"
+      android:layout_weight="1"
+     android:hint="  enter a note"
+       android:layout_width="0dp"
+        android:inputType="text"
+         android:lines="5"
+         android:singleLine="false" 
+     
+
+     />
+        
+
+    <Button
+        android:id="@+id/btnadd"
+        android:layout_width="wrap_content"
+        android:layout_height="29dp"
+      
+        android:background="@drawable/buttonselect"
+    
+        
+        android:text="Save Note"
+        android:textColor="@color/white" />
+       </LinearLayout>
+       <TextView
+            android:layout_width="fill_parent"
+            android:textColor="#000000"
+           android:textStyle="bold"
+            android:text="History of calls"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:id="@+id/textwelcome" android:textSize="20dp"/>
+<LinearLayout
         android:id="@+id/linlaHeaderProgress"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:gravity="center"
         android:orientation="vertical"
-        android:visibility="gone" >
+        android:visibility="visible" >
 
         <ProgressBar
             android:id="@+id/pbHeaderProgress"
@@ -25,55 +205,29 @@
             android:id="@+id/loadingtext"       
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
-         android:text="loading...." />
+         android:text="loading records...." />
     </LinearLayout>
-   <TextView
-            android:layout_width="200dp"
-            android:textColor="#000000"
-            android:layout_gravity="center_horizontal"
-            android:layout_height="40dp"
-            android:id="@+id/textwelcome" android:textSize="20dp"/>
-    <TextView
-        android:id="@+id/textViewtest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-     
-    
-   <Button
-        android:id="@+id/buttoncall"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/buttonchoosecontacts"
-        android:layout_below="@+id/buttonchoosecontacts"
-        android:layout_marginTop="14dp"
-        android:text="Auto Dial This Numbers" />
-<Button
-        android:id="@+id/buttonnextcall"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/buttonchoosecontacts"
-        android:layout_below="@+id/buttonchoosecontacts"
-        android:layout_marginTop="14dp"
-        android:text="Continue Dialing where i left off" />
      <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
-
-        <ListView
-            android:id="@+id/list"
+<ListView
+            android:id="@+id/listcontacts"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:focusable="false"
+            android:dividerHeight="0dp"
+             android:divider="@null"
             android:focusableInTouchMode="false" />
+
+       <TextView 
+    android:id="@+id/emptyResults"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+      android:gravity="center"
+    android:text="No History for this contact synced refresh using the refresh button" />
     </LinearLayout>
  
    
 </LinearLayout>
+
