--- a/res/layout/incoming_call.xml
+++ b/res/layout/incoming_call.xml
@@ -2,39 +2,207 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/button_gradient"
+    android:background="@color/White"
     android:orientation="vertical" >
-    <TextView
-        android:id="@+id/textsalespacer"
-        android:layout_width="wrap_content"
+     <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
+         android:id="@+id/google_now"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            style="@style/GNowProgressBar"/>
+     <LinearLayout
+     android:layout_width="match_parent"
+      android:layout_marginTop="20dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textColor="@color/White"
-        android:textSize="30sp"
-        android:text="Sales Pacer" />
+         android:background="@color/Blue"
+      android:layout_gravity="center"
+        android:orientation="vertical"
+        >
+    
 
     <TextView
         android:id="@+id/textsearchhistory"
+       
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textSize="30sp"
          android:textColor="@color/White"
         android:text="TextView" />
-    <TextView
-        android:id="@+id/textsearching"
+     </LinearLayout>
+     <LinearLayout
+     android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+      android:layout_gravity="center"
+        android:orientation="horizontal"
+        >
+    <Button
+        android:id="@+id/answer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="20sp"
-         android:textColor="@color/White"
-        android:text="searching for history for this contact..." />
+      
+        android:background="@color/Green"
+      
+        android:text="Answer Call"
+        android:textColor="@color/white" />
+    <Button
+        android:id="@+id/decline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+    android:layout_marginLeft="20dp"
+        android:background="@color/Red"
+      
+        android:text="Decline Call"
+        android:textColor="@color/white" />
+    </LinearLayout>
+    <Button
+        android:id="@+id/hangup"
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+    android:layout_marginLeft="20dp"
+     android:layout_marginRight="20dp"
+        android:background="@color/Red"
+      android:visibility="gone"
+        android:text="Hang Up Call"
+        android:textColor="@color/white" />
+     <Button
+        android:id="@+id/btnexit"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
+        android:visibility="gone"
+        android:background="@drawable/buttonselect"
+        android:onClick="addNewAnimal"
+        android:text="Open Sales Pacer"
+        android:textColor="@color/white" />
+    <LinearLayout
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+      android:gravity="center"
+      android:layout_marginTop="15dp"
+    android:orientation="horizontal" >
+ 
+    <CheckBox
+        android:id="@+id/cb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:text="hakuna" />
+    <ImageView
+        android:id="@+id/imageViewloadspeaker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+      
+        android:src="@drawable/loadspeaker" />
+ <ImageView
+        android:id="@+id/imageViewmute"
+        android:layout_width="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_height="wrap_content"
+      
+        android:src="@drawable/mute_calls" />
+  <ImageView
+        android:id="@+id/imageViewrecord"
+        android:layout_width="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_height="wrap_content"
+      
+        android:src="@drawable/record_call" />
+  </LinearLayout>
 <ProgressBar
         android:id="@+id/progress"
         style="?android:attr/progressBarStyleInverse"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="150dp"
-        android:visibility="visible" />
+        android:layout_marginTop="20dp"
+        android:visibility="gone" />
+ <LinearLayout
+     android:layout_width="fill_parent"
+     android:layout_marginTop="20dp"
+        android:layout_height="wrap_content"
+     android:orientation="horizontal"
+       >
+
+     <EditText
+         android:id="@+id/etEdit"
+          android:background="@drawable/edittext_customisation"
+           android:layout_height="match_parent"
+      android:layout_weight="1"
+     android:hint="  enter a note"
+      android:lines="5"
+         android:singleLine="false"
+       android:layout_width="0dp"
+        android:inputType="text"
+         >
+     
+  <requestFocus />
+ 
+    </EditText>
+        
+
+    <Button
+        android:id="@+id/btnadd"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+      
+        android:background="@drawable/buttonselect"
+    
+        
+        android:text="Save Note"
+        android:textColor="@color/white" />
+       </LinearLayout>
+<TextView
+            android:layout_width="fill_parent"
+            android:layout_marginTop="20dp"
+            android:textColor="#000000"
+            android:text="History of calls"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:id="@+id/textwelcome" android:textSize="20dp"/>
+
+     <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+    <LinearLayout
+        android:id="@+id/linlaHeaderProgress"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="visible" >
+
+        <ProgressBar
+            android:id="@+id/pbHeaderProgress"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+        
+        
+        </ProgressBar>
+              <TextView
+            android:id="@+id/loadingtext"       
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="loading records...." />
+    </LinearLayout>
+<ListView
+            android:id="@+id/listcontacts"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:focusable="false"
+            android:dividerHeight="0dp"
+             android:divider="@null"
+            android:focusableInTouchMode="false" />
+
+       <TextView 
+    android:id="@+id/emptyResults"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+      android:gravity="center"
+    android:text="No History for this contact synced " />
+    </LinearLayout>
+    
 </LinearLayout>
