--- a/res/layout/popup_activity.xml
+++ b/res/layout/popup_activity.xml
@@ -13,5 +13,12 @@
         android:textSize="30sp"
         android:text="TextView" />
     
-
+<ProgressBar
+        android:id="@+id/progress"
+        style="?android:attr/progressBarStyleInverse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="150dp"
+        android:visibility="visible" />
 </LinearLayout>
