--- a/res/layout/splash.xml
+++ b/res/layout/splash.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
     Copyright 2010-present Facebook.
 
@@ -16,10 +17,13 @@
 -->
 
 <ScrollView
+    
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ProgressWheel="http://schemas.android.com/apk/res-auto"
+    
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#303040" >
+    android:background="@color/White" >
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -32,14 +36,7 @@
             android:layout_marginTop="30dp"
             android:gravity="center_horizontal"
             android:orientation="horizontal" >
-            <ImageView
-                android:id="@+id/splash_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:gravity="center"
-                android:src="@drawable/sales_launcher" />
+            
             <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -51,42 +48,65 @@
                 android:layout_gravity="center"
                 android:gravity="center"
            
-                android:textColor="#AFDEFE"
+                android:textColor="@color/black"
                 android:textSize="28sp"
                 android:typeface="serif"
                 android:textStyle="italic"
                 android:text="@string/app_name" />
-            <TextView
-        android:id="@+id/eventtexview"
+           <TextView
+        android:id="@+id/subheading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
-      android:textColor="@color/White"  
+         android:textSize="20sp"
+      android:textColor="@color/black"  
         android:layout_gravity="left"
-        android:text="Making sales made easy"
+        android:text="Please Login to get started"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textStyle="bold" />
+         />
            </LinearLayout> 
         </LinearLayout>
 
+<LinearLayout
+        android:id="@+id/Progressbarnew"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone" >
+ 
+ <com.todddavies.components.progressbar.ProgressWheel   
+    android:id="@+id/pw_spinner"     
+    android:layout_width="200dp"    
+    android:layout_height="200dp"   
+    android:layout_centerInParent="true"   
+    ProgressWheel:text="Authenticating..."    
+    ProgressWheel:textColor="#222"   
+    ProgressWheel:textSize="14sp"   
+    ProgressWheel:rimColor="#330097D6"   
+    ProgressWheel:barLength="60dp"    
+    ProgressWheel:barColor="#0097D6"   
+    ProgressWheel:barWidth="5dp"   
+    ProgressWheel:rimWidth="2dp" /> 
+ 
+ </LinearLayout>
 
-        <TextView
-            android:id="@+id/profile_name"
-            android:layout_width="174dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="35dp"
-            
-            android:lines="2"
-            android:textColor="@color/White"
-            android:textSize="17sp"
-            android:text="to get started login with your account"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center_horizontal"/>
+<TextView
+    android:id="@+id/profile_name"
+    android:layout_width="174dp"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="35dp"
+    android:gravity="center_horizontal"
+    android:lines="2"
+    android:text="to get started login with your account"
+    android:textColor="@color/White"
+    android:textSize="17sp" />
+
 <EditText
             android:layout_width="fill_parent"
             android:layout_height="40dp"
              android:layout_marginTop="6dp"
-            android:hint="  Enter your E-mail"
+            android:hint="  E-mail"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
             android:id="@+id/email"
@@ -124,9 +144,9 @@
             android:layout_marginTop="20dp"
             android:text="Login"
             android:id="@+id/login"
-            android:background="@drawable/button_gradient"
+            android:background="@drawable/buttonselect"
             android:textSize="13dp"
-            android:textColor="#000000"
+            android:textColor="@color/White"
             android:layout_gravity="center_horizontal"
            />
  <Button
@@ -136,11 +156,9 @@
             android:layout_marginTop="10dp"
             android:background="@null"
             android:text="forgot password?"
-            android:textColor="#21dbd4"
+            android:textColor="@color/Blue"
             android:textStyle="bold" />
  
- 
-
          <!--  Link to Registration Screen -->
         <Button
             android:id="@+id/registerbtn"
@@ -149,8 +167,18 @@
             android:layout_marginTop="10dp"
             android:background="@null"
             android:text="don&apos;t have an account. Register Here"
-            android:textColor="#21dbd4"
+            android:textColor="@color/Blue"
             android:textStyle="bold" />
-
+<TextView
+        android:id="@+id/copyright"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+      
+         android:textSize="10sp"
+      android:textColor="@color/black"  
+        android:layout_gravity="center"
+        android:text="Copyright© 2014 by DASH. All rights reserved."
+        android:textAppearance="?android:attr/textAppearanceSmall"
+         />
     </LinearLayout>
 </ScrollView>
