--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -12,4 +12,6 @@
      <dimen name="sticky_height">120dp</dimen>
     <dimen name="top_height">150dp</dimen>
     <dimen name="page_margin">16dp</dimen>
+    <dimen name="custom_crouton_height">50dp</dimen>
+     <dimen name="custom_crouton_height2">50dp</dimen>
 </resources>
