--- a/res/layout/incoming_call.xml
+++ b/res/layout/incoming_call.xml
@@ -157,6 +157,7 @@
             android:layout_marginTop="20dp"
             android:textColor="#000000"
             android:text="History of calls"
+             android:textStyle="bold"
             android:layout_gravity="center_horizontal"
             android:gravity="center"
             android:layout_height="wrap_content"
