--- a/res/layout/splash.xml
+++ b/res/layout/splash.xml
@@ -107,6 +107,7 @@
             android:layout_height="40dp"
              android:layout_marginTop="6dp"
             android:hint="  E-mail"
+            android:inputType="textEmailAddress"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
             android:id="@+id/email"
