--- a/res/xml/changelog.xml
+++ b/res/xml/changelog.xml
@@ -1,5 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <changelog>
+      <release version="2.2.3" versioncode="2">
+         
+             <change>Minor interface bug fixes</change>
+               <change>fixed saving note offline bug</change>
+                 <change>added direct call initiation from web</change>
+                   <change>minimised save history notification</change>
+                     <change>added some tweaks on 3G network for faster sync </change>
+                      <change>improved the registration process</change>
+           </release>
+     <release version="2.2.2" versioncode="2">
+          <change>New! Fixed the incoming call -Missed call bug</change>
+           <change>improved the Login process made it more flexible</change>
+          <change>Important:Changed the server for more faster network speeds</change>
+           <change>Added enter note to incoming call</change>
+             <change>Minor bug fixes</change>
+               <change>Added saving note offline</change>
+                 <change>Added user choice to retry connection</change>
+                   <change>Added support for android 2.3.3 and over</change>
+                     <change>Small interface changes</change>
+                      <change>improved the sync with the sales pacer website</change>
+           </release>
      <release version="2.2.1" versioncode="2">
           <change>Added new update notification</change>
          <change>Changed the layout to be more fluid</change>
